AlignArrayElements